Add Application class

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>org.example</groupId>
     <artifactId>SeeYouInCourt-backend</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>2.6.7</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
