--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=123
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+server.port=${port:8080}
 
 spring.h2.console.enabled=true
 
